src/components/page/page.scss
$basepage-font-size: 2rem;
$basepage-gutter: 2vh 4vw;

.page-container {
  height: 100%;
  background-color: #fff;
  color: #000;

  &.dark-mode {
    background-color: #000;
    color: #fff;
  }

  main {
    padding: $basepage-gutter;
    font-size: $basepage-font-size;
    flex: 1 0 auto;
  }
}

.footer,
footer {
  padding: 1rem;
  font-size: 1rem;

  a {
    margin-right: 1rem;
    text-decoration: none;
    text-shadow: currentColor;
    transition: text-shadow 0.2s linear;
  }

  a,
  a:hover {
    color: currentColor;
  }

  a:hover {
    text-decoration: none;
    text-shadow: .1rem .1rem 1rem currentColor;
  }
}

